--- a/.gitignore
+++ b/.gitignore
@@ -30,7 +30,7 @@ wheels/
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports / vcr cassettes
+# Unit test / coverage reports
 htmlcov/
 .tox/
 .coverage
@@ -40,7 +40,6 @@ nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
-vcr_cassettes/
 
 # Translations
 *.mo
